fix title  on mobile view

--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -183,6 +183,7 @@
 
   .title {
     font-size: 1.2rem;
+    letter-spacing: 2px;
   }
 
   .text {
